# arc-chatpdf

./: .dockerignore  .env  .gitignore  Dockerfile  EVALUATION.md  README.md  agents.py  app.py  docker-compose.yml  evaluation.py  evaluation_results.json  golden_qa_pairs.json  ingest_pdfs.py  langgraph.json  main.py  pyproject.toml  requirements.txt  run_evaluation.py  test_system.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
data/: .gitkeep
